<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WithPartner</string>
    
    <string name="title">友達・家族・大切な人との\n思い出をメモしよう</string>

    <string name="trip">おでかけ\nする</string>
    <string name="family">家族と\n過ごす</string>
    <string name="words">感謝を\n伝える</string>
    <string name="laugh">一緒に\n笑う</string>
    <string name="present">贈り物を\n贈る</string>
    <string name="memory">思い出を\n振り返る</string>
    
    <string name="hokkori">ほっこり</string>
    <string name="hokkori_count">%1$d回ほっこりしました</string>
    <string name="hokkori_memo">ほっこりメモ</string>
    
    <string name="delete_confirm">削除してよろしいですか？</string>
    
    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <string name="share">share</string>
</resources>
