<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:gravity="center"
        android:layout_margin="20dip"
        />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        >
        
        <LinearLayout
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/button_trip"
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_margin="20dip"
                android:layout_weight="1"
                android:text="@string/trip" />

            <Button
                android:id="@+id/button_words"
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_margin="20dip"
                android:layout_weight="1"
                android:text="@string/words" />

            <Button
                android:id="@+id/button_present"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dip"
                android:layout_weight="1"
                android:text="@string/present" />

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            
            <Button
                android:id="@+id/button_family"
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_margin="20dip"
                android:layout_weight="1"
                android:text="@string/family" />

            <Button
                android:id="@+id/button_laugh"
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_margin="20dip"
                android:layout_weight="1"
                android:text="@string/laugh" />

            <Button
                android:id="@+id/button_memory"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dip"
                android:layout_weight="1"
                android:text="@string/memory" />

            ></LinearLayout>
    </LinearLayout>

</LinearLayout>
